@@ -42,7 +42,7 @@ class RecetteForm extends BaseRecetteForm
 
 		$this->validatorSchema['mis_a_jour_par'] = new sfValidatorInteger();
 		$this->validatorSchema['actif'] = new sfValidatorBoolean();
-		$this->validatorSchema['montant'] = new sfValidatorNumber(array('min' => 0), array('min' => 'ne peut être négatif'));
+		$this->validatorSchema['montant'] = new sfValidatorAmount(array('min' => 0), array('min' => 'ne peut être négatif'));
 
 		// r19 : customize the appearance
 		$this->widgetSchema['libelle']->setAttribute('class', 'formInputLarge');
